added events, updated style

--- a/about.html
+++ b/about.html
@@ -106,21 +106,22 @@
           </div>
      </section>
 
+     
+     <!-- Section Content Image -->
+     <section class="container-fluid section-page-container section-image">
+          <div class="row">
+               <div class="col-xs-12">
+                    <img src="images/trick-c-image.jpg" alt="UrbanDivas" class="img-rounded img-responsive center-block">
+               </div>
+          </div>
 
-
-     <!-- Section Image About -->
-<!--
-     <section class="container-fluid">
-          <div class="cta-container cta-page-container">
-               <p>Don't want to miss the next event? Be the first to know!
-                    <span id="cta-line"><input type="email" id="email" placeholder="   Email" required>
-                           <input type="submit" id="getinfo" value="Get Info">
-                    </span>
-               </p>
+          <div class="row back-to-top visible-xs">
+               <div class="col-xs-12">
+                    <a href="#logo" class="btn btn-black">Back to Top</a>
+               </div>
           </div>
      </section>
-
-
+     
 
      <!-- Footer -->
      <footer id="footer" class="container-fluid">
