--- a/events.html
+++ b/events.html
@@ -34,9 +34,9 @@
                     <div class="collapse navbar-collapse" id="navbar">
                          <ul class="nav navbar-nav">
                               <li><a href="releases.html">RELEASES</a></li>
-                              <li><a href="events.html">EVENTS</a></li>
+                              <li class="selected"><a href="events.html">EVENTS</a></li>
                               <li><a href="music.html">MUSIC</a></li>
-                              <li class="selected"><a href="projects.html">PROJECTS</a></li>
+                              <li><a href="projects.html">PROJECTS</a></li>
                               <li><a href="about.html">ABOUT</a></li>
                          </ul>
                          <span><button class="btn btn-default navbar-btn btn-black hidden-xs"><a data-toggle="modal" data-target="#contactModal">Contact</a></button></span>
@@ -46,77 +46,46 @@
      </header>
 
 
-     <!-- Section Content Projects -->
+     <!-- Section Content Events -->
      <section class="container-fluid section-page-container">
           <div class="row page-heading">
-               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <h2 class="visible-xs visible-sm">Urban Divas &amp; BodyWork</h2>
-                    <h2 class="visible-md visible-lg">Urban Divas <small>~since 2007~</small></h2>
-               </div>
-               <div class="col-md-6 col-lg-6">
-                    <h2 class="visible-md visible-lg">BodyWork <small>~since 2012~</small></h2>
+               <div class="col-xs-12">
+                    <h2>Next Event</h2>
                </div>
           </div>
-          <div class="row page-sub-heading visible-xs visible-sm">
-               <h3>Urban Divas <small>~since 2007~</small></h3>
+          <div class="row">
+               <div class="col-xs-12">
+                    <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block enlarge-image">
+                    <div class="caption-image">
+                         <h3>9.12.2017 &commat; Maribor, Slovenia</h3>
+                    </div>
+               </div>
           </div>
+     </section>
 
-
-          <div class="row page-text">
+     <section class="container-fluid section-page-container">
+          <div class="row page-heading">
+               <div class="col-xs-12">
+                    <h2>Previous Events</h2>
+               </div>
+          </div>
+          <div class="row">
                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <div class="col-md-12 col-lg-12">            <!-- added space between columns  -->
-                         <p>
-                              One of the pioneers of Slovenian electronic music is guided by her passion for Techno - not only through numerous DJ performances but also as an organiser of events (including the first techno events in Slovenia in general) and a promoter of women's DJing
-                              and producing. As one of the few female DJs in Slovenia she helps young women to develop their personal &amp; professional talent.
-                         </p>
-                         <p>
-                              In 2007 Trick-C started the project Urban Divas - it's the name of her events and a socially engaged international initiative for promotion and development of talented women in electronic music with which she wants to provide additional feminine touch.
-                              Much attention is given to less renowned girls, enabling them the opportunity she didn't have.
-                         </p>
-                         <p>
-                              Urban Divas is a project created after many years of experience in the field of organisation, booking and participation in various projects on the basis of a number of experiences and cooperation in the promotion of female DJs in Slovenia, neighbouring
-                              Croatia and Belgium.
-                         </p>
-                         <p>
-                              Among the first Urban Divas beside Trick-C were - Natalija Bogataj / House Wife, one of the most sophisticated underground DJanes with a long mileage and still active in the Slovenian underworld; young Marina Karamarko (ex. Miss Soulfly), today resident
-                              for the VIVa Warriors parties at Sankeys and Sankeys Global resident DJ and the "First Lady of Croatian Electronic Music" - Virgin Helena.
-                         </p>
-                         <p>
-                              In 10 years Urban Divas hosted and shared the stage with many women in electronic music. Lory The Hi Fi Princess (CAN), Beyza (TR) Miss Sunshine aka Insolate (HR), Mistress Barbara (S), Gayle Sun (J), Nakadia (THAI), La Di Da (CZ), Miss Djax (NL), Linda
-                              Pearl (GER), Miss Electric (AUT), Electric Indigo (AUT), Daniela Haverbeck (NL), Juliana Yamasaki &amp; Julyukie (BR / GER).
-                         </p>
-                         <p>
-                              Today the residence at Urban Divas (and Bodywork) belongs besides Trick-C to a young, talented lady from Zagreb /Croatia - Teychee (Insurgency). Urban Divas is a synonym for female touch on the dance floor but expect uncompromised Techno, old and new
-                              school, hard, deep, dark &amp; driving BPM's of Urban Ladies.
-                         </p>
+                    <img src="images/events/previous-event-1.jpg" alt="previous-event-1" class="img-rounded img-responsive center-block enlarge-image">
+                    <div class="caption-image">
+                         <h3>22.9.2017 &commat; Ljubljana, Slovenia</h3>
                     </div>
                </div>
 
                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <div class="col-md-12 col-lg-12">
-                         <div class="row page-text page-sub-heading visible-xs visible-sm">
-                              <h3>BodyWork <small>~since 2012~</small></h3>
-                         </div>
-                         <p>
-                              The Pioneer of Slovenian electronic movement and renowned club promoter Trick-C has come up with a new series of intimate and at the same time special events called BodyWork.
-                         </p>
-                         <p>
-                              The concept preserves the pristine touch of electronic events, where the most important thing is gathering of "young" and "young by heart" with the quality music of selected domestic and foreign artists of underground techno .
-                         </p>
-                         <p>
-                              BodyWork puts "Underground Techno" into a wider club environment. Thus it brings freshness and novelty... today's techno sound under the fingers of skilled selectors is such that it quickly clings under the skin of all generations, who are constantly
-                              looking for dynamics, power and energy in music.
-                         </p>
-                         <p>
-                              For all people who love techno with the touch of the pristine underground.
-                         </p>
-                         <p>
-                              Our residents: Trick-C. – (Techno, New School Techno, Dark Techno, Industrial, Harddrive) and aka Red Mama (HardTechno) Neotech - Dante Benami Teychee (HR) - Techno aka Insurgency Industria (HR) - Industrial AlyCea (Bodywork Junior) - HardTechno Acts:
-                              Harddivas (Trick-C &amp; Teychee) - 2 Djanes, 2 mixers, 4 decks - Harddrive, new school, Techno
-                         </p>
+                    <img src="images/events/previous-event-2.jpg" alt="previous-event-2" class="img-rounded img-responsive center-block enlarge-image">
+                    <div class="caption-image">
+                         <h3>9.9.2017 &commat; Zagreb, Croatia</h3>
                     </div>
                </div>
           </div>
+
+
           <div class="row back-to-top visible-xs">
                <div class="col-xs-12">
                     <a href="#logo" class="btn btn-black">Back to Top</a>
@@ -124,14 +93,24 @@
           </div>
      </section>
 
-
-     <!-- Section Content Image -->
      <section class="container-fluid section-page-container section-image">
+          <hr class="transparent">
           <div class="row">
-               <div class="col-xs-12">
-                    <img src="images/bodywork-image.jpg" alt="BodyWork" class="img-rounded img-responsive center-block">
+               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <img src="images/events/previous-event-3.jpg" alt="previous-event-3" class="img-rounded img-responsive center-block enlarge-image">
+                    <div class="caption-image">
+                         <h3>7.8.2017 &commat; Medvode, Slovenia</h3>
+                    </div>
+               </div>
+
+               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <img src="images/events/previous-event-4.jpg" alt="previous-event-4" class="img-rounded img-responsive center-block enlarge-image">
+                    <div class="caption-image">
+                         <h3>9.12.2017 &commat; Ljubljana, Slovenia</h3>
+                    </div>
                </div>
           </div>
+
 
           <div class="row back-to-top visible-xs">
                <div class="col-xs-12">
