--- a/releases.html
+++ b/releases.html
@@ -119,13 +119,7 @@
                               </div>
                          </div>
                          <div class="clearfix visible-md visible-lg"></div>
-                         
-                         <hr>
-                         <div class="btn btn-black btn-samples">
-                              <a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Listen More on Beatport</a>
-                         </div>
                     </div>
-
                </div>
 
                <!-- Releases -->
@@ -208,27 +202,19 @@
                </div>
           </div>
 
+          <div class="row end-button">
+               <div class="col-xs-12">
+                    <span class="btn btn-black"><a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Find More on Beatport</span>
+               </div>
+          </div>
+
+
           <div class="row back-to-top visible-xs">
                <div class="col-xs-12">
                     <a href="#logo" class="btn btn-black">Back to Top</a>
                </div>
           </div>
      </section>
-
-
-
-     <!-- Section Image Projects -->
-     <!--
-     <section class="container-fluid">
-          <div class="cta-container cta-page-container">
-               <p>Don't want to miss the next event? Be the first to know!
-                    <span id="cta-line"><input type="email" id="email" placeholder="   Email" required>
-                           <input type="submit" id="getinfo" value="Get Info">
-                    </span>
-               </p>
-          </div>
-     </section>
-
 
 
      <!-- Footer -->
