added music, updated style

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
      <main class="container-fluid main-home-container">
           <div class="cta-container">
                <div class="opaque-overlay">&nbsp;</div>
-               <p>Don't want to miss the next event? Be the first to know!
+               <p>Don't want to miss the next event?
                     <span id="cta-line"><input type="email" id="email" placeholder="   Email" required>
                            <input type="submit" id="getinfo" value="Get Info">
                     </span>
@@ -66,7 +66,7 @@
      <section class="container-fluid">
           <div class="row next-event jumbotron">
                <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
-                    <p>NEXT EVENT: 9.12.2017 @ Maribor, Slovenia</p>
+                    <p><a href="events.html">NEXT EVENT: 9.12.2017 @ Maribor, Slovenia</a></p>
                </div>
           </div>
           <div class="section-home-container">
@@ -88,55 +88,35 @@
                     </div>
 
                     <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4">
+                         <div class="visible-lg image-event-homepage">
+                    <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block">
+                         </div>
+                         
                          <h2>LATEST RELEASES:</h2>
-                         <div class="boxes-releases">
-                              <img src="images/releases/release1.jpg" class="img-circle">
-                              <div class="caption">
-                                   <h3>The Remixes, Vol. 4</h3>
-                                   <p>Trick-C, Various Artists</p>
-                                   <p><i>Shout Records</i></p>
-                              </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release1.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>The Remixes, Vol. 4</h3>
+                              <p>Trick-C, Various Artists</p>
+                              <p><i>Shout Records</i></p>
                          </div>
-                         <div class="boxes-releases">
-                              <img src="images/releases/release2.jpg" class="img-circle">
-                              <div class="caption">
-                                   <h3>Subspace</h3>
-                                   <p>Trick-C, A-Brothers, Gabeen</p>
-                                   <p><i>Shout Records</i></p>
-                              </div>
+                    </div>
+                    <div class="boxes-releases">
+                         <img src="images/releases/release2.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Subspace</h3>
+                              <p>Trick-C, A-Brothers, Gabeen</p>
+                              <p><i>Shout Records</i></p>
                          </div>
-                         <div class="boxes-releases">
-                              <img src="images/releases/release3.jpg" class="img-circle">
-                              <div class="caption">
-                                   <h3>Lightness</h3>
-                                   <p>Trick-C, Various Artists</p>
-                                   <p><i>Different Is Different Records</i></p>
-                              </div>
+                    </div>
+                    <div class="boxes-releases hidden-xs">
+                         <img src="images/releases/release3.jpg" class="img-circle">
+                         <div class="caption">
+                              <h3>Lightness</h3>
+                              <p>Trick-C, Various Artists</p>
+                              <p><i>Different Is Different Records</i></p>
                          </div>
-                         <div class="boxes-releases">
-                              <img src="images/releases/release4.jpg" class="img-circle">
-                              <div class="caption">
-                                   <h3>Ask For Treatment EP</h3>
-                                   <p>Trick-C, Veztax</p>
-                                   <p><i>Vezotonik Records</i></p>
-                              </div>
-                         </div>
-                         <div class="boxes-releases">
-                              <img src="images/releases/release5.jpg" class="img-circle">
-                              <div class="caption">
-                                   <h3>Angular</h3>
-                                   <p>Trick-C</p>
-                                   <p><i>Different Is Different Records</i></p>
-                              </div>
-                         </div>
-                         <div class="boxes-releases">
-                              <img src="images/releases/release6.jpg" class="img-circle">
-                              <div class="caption">
-                                   <h3>Female:pressure</h3>
-                                   <p>Trick-C, Various Artists</p>
-                                   <p><i>Different Is Different Records</i></p>
-                              </div>
-                         </div>
+                    </div>
                     </div>
                </div>
           </div>
