--- a/music.html
+++ b/music.html
@@ -34,8 +34,8 @@
                     <div class="collapse navbar-collapse" id="navbar">
                          <ul class="nav navbar-nav">
                               <li><a href="releases.html">RELEASES</a></li>
-                              <li class="selected"><a href="events.html">EVENTS</a></li>
-                              <li><a href="music.html">MUSIC</a></li>
+                              <li><a href="events.html">EVENTS</a></li>
+                              <li class="selected"><a href="music.html">MUSIC</a></li>
                               <li><a href="projects.html">PROJECTS</a></li>
                               <li><a href="about.html">ABOUT</a></li>
                          </ul>
@@ -45,71 +45,94 @@
           </nav>
      </header>
 
-
-     <!-- Section Content Events -->
-     <section class="container-fluid section-page-container">
+     <!-- Section Content Music -->
+     <section class="container-fluid section-page-container section-image">
           <div class="row page-heading">
                <div class="col-xs-12">
-                    <h2>Next Event</h2>
+                    <h2>Mixes</h2>
                </div>
           </div>
+
           <div class="row">
-               <div class="col-xs-12">
-                    <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block enlarge-image">
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/5iM8E2B0yIo?rel=0"></iframe>
+                    </div>
                     <div class="caption-image">
-                         <h3>9.12.2017 &commat; Maribor, Slovenia</h3>
+                         <h3>I Call It Techno Vol. 5</h3>
                     </div>
-
-                    <hr class="transparent">
-
-                    <!-- Button Follow Me -->
-                    <div class="btn-group">
-                         <button type="button" class="btn btn-red dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Follow Me <span class="caret"></span>
-                              </button>
-                         <ul class="dropdown-menu">
-                              <li class="dropdown-header">Facebook</li>
-                              <li><a href="https://www.facebook.com/djtrickc/" target="_blank">Trick-C</a></li>
-                              <li><a href="https://www.facebook.com/redmamatrickc/" target="_blank">Red Mama</a></li>
-                              <li><a href="https://www.facebook.com/trickcurbandivas/" target="_blank">Urban Divas</a></li>
-                              <li><a href="https://www.facebook.com/bdyWork/" target="_blank">BodyWork</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li class="dropdown-header">Instagram</li>
-                              <li><a href="https://www.instagram.com/tr1ckc/" target="_blank">Trick-C</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li class="dropdown-header">Other</li>
-                              <li><a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Beatport</a></li>
-                              <li><a href="https://www.mixcloud.com/TrickC/" target="_blank">Mixcloud</a></li>
-                              <li><a href="https://soundcloud.com/urbandivas" target="_blank">SoundCloud</a></li>
-                              <li><a href="https://www.youtube.com/channel/UCzbbByOrazwgcWu0PQfVjHg" target="_blank">YouTube</a></li>
-                         </ul>
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/242056002&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
                     </div>
+                    <div class="caption-image">
+                         <h3>The Nightmare Factory Podcast, Episode I (MMXVI)</h3>
+                    </div>
+               </div>
+               <div class="clearfix visible-sm visible-md"></div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/m9Lr0TiX7Ko"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>I Call It Techno Vol. 4</h3>
+                    </div>
+               </div>
+               <div class="clearfix visible-lg"></div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/dxPmcVg_yyI"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>I Call It Techno Vol. 3</h3>
+                    </div>
+               </div>
+               <div class="clearfix visible-sm visible-md"></div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.mixcloud.com/widget/iframe/?light=1&feed=%2Ftrickc%2Fred-mama-hard-techno-set-hard-frequency-podcast%2F"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>Hard Frequency Podcast, Red Mama Hard Techno Set</h3>
+                    </div>
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.mixcloud.com/widget/iframe/?light=1&feed=%2Ftrickc%2Fred-mama-hard-work-vol-1%2F"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>Hard Work Vol. 1</h3>
+                    </div>
+               </div>
+               <div class="clearfix visible-sm visible-md visible-lg"></div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/194398248&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>SUB CULT Podcast 19</h3>
+                    </div>
+               </div>
 
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qRtyX0VHCKw"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>I Call It Techno Vol. 2</h3>
+                    </div>
+               </div>
+               <div class="clearfix visible-sm visible-md"></div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+                    <div class="embed-responsive embed-responsive-16by9">
+                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ThOWadKFFb8"></iframe>
+                    </div>
+                    <div class="caption-image">
+                         <h3>I Call It Techno Vol. 1</h3>
+                    </div>
                </div>
           </div>
-     </section>
-
-     <section class="container-fluid section-page-container previous-events">
-          <div class="row page-heading">
-               <div class="col-xs-12">
-                    <h2>Previous Events</h2>
-               </div>
-          </div>
-          <div class="row">
-               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src="images/events/previous-event-1.jpg" alt="previous-event-1" class="img-rounded img-responsive center-block enlarge-image">
-                    <div class="caption-image">
-                         <h3>22.9.2017 &commat; Ljubljana, Slovenia</h3>
-                    </div>
-               </div>
-
-               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src="images/events/previous-event-2.jpg" alt="previous-event-2" class="img-rounded img-responsive center-block enlarge-image">
-                    <div class="caption-image">
-                         <h3>9.9.2017 &commat; Zagreb, Croatia</h3>
-                    </div>
-               </div>
-          </div>
-
 
           <div class="row back-to-top visible-xs">
                <div class="col-xs-12">
@@ -117,33 +140,6 @@
                </div>
           </div>
      </section>
-
-     <section class="container-fluid section-page-container section-image events">
-          <hr class="transparent">
-          <div class="row">
-               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src="images/events/previous-event-3.jpg" alt="previous-event-3" class="img-rounded img-responsive center-block enlarge-image">
-                    <div class="caption-image">
-                         <h3>7.8.2017 &commat; Medvode, Slovenia</h3>
-                    </div>
-               </div>
-
-               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                    <img src="images/events/previous-event-4.jpg" alt="previous-event-4" class="img-rounded img-responsive center-block enlarge-image">
-                    <div class="caption-image">
-                         <h3>9.12.2017 &commat; Ljubljana, Slovenia</h3>
-                    </div>
-               </div>
-          </div>
-
-
-          <div class="row back-to-top visible-xs">
-               <div class="col-xs-12">
-                    <a href="#logo" class="btn btn-black">Back to Top</a>
-               </div>
-          </div>
-     </section>
-
 
      <!-- Footer -->
      <footer id="footer" class="container-fluid">
