--- a/projects.html
+++ b/projects.html
@@ -117,11 +117,29 @@
                     </div>
                </div>
           </div>
-          <div class="row back-to-top visible-xs">
-               <div class="col-xs-12">
-                    <a href="#logo" class="btn btn-black">Back to Top</a>
-               </div>
+          
+                    <!-- Button Follow Me -->
+          <div class="btn-group">
+               <button type="button" class="btn btn-red dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Follow Me <span class="caret"></span>
+                              </button>
+               <ul class="dropdown-menu">
+                    <li class="dropdown-header">Facebook</li>
+                    <li><a href="https://www.facebook.com/djtrickc/" target="_blank">Trick-C</a></li>
+                    <li><a href="https://www.facebook.com/redmamatrickc/" target="_blank">Red Mama</a></li>
+                    <li><a href="https://www.facebook.com/trickcurbandivas/" target="_blank">Urban Divas</a></li>
+                    <li><a href="https://www.facebook.com/bdyWork/" target="_blank">BodyWork</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown-header">Instagram</li>
+                    <li><a href="https://www.instagram.com/tr1ckc/" target="_blank">Trick-C</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li class="dropdown-header">Other</li>
+                    <li><a href="https://www.beatport.com/artist/trick-c/100087" target="_blank">Beatport</a></li>
+                    <li><a href="https://www.mixcloud.com/TrickC/" target="_blank">Mixcloud</a></li>
+                    <li><a href="https://soundcloud.com/urbandivas" target="_blank">SoundCloud</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCzbbByOrazwgcWu0PQfVjHg" target="_blank">YouTube</a></li>
+               </ul>
           </div>
+          
      </section>
 
 
