--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <meta name="description" content="Trick-C - First Lady of Slovenian Techno - is one of the pioneers of Slovenian electronic music &amp; Techno and without doubt from a wider perspective one of the rarest female artist with such a long mileage who is still working on nowadays underground Techno scene.">
+     <meta property="og:title" content="Trick-C | First Lady of Slovenian Techno">
+     <meta property="og:image" content="images/trick-c-image.jpg">
+     <meta property="og:description" content="Trick-C - First Lady of Slovenian Techno - is one of the pioneers of Slovenian electronic music &amp; Techno and without doubt from a wider perspective one of the rarest female artist with such a long mileage who is still working on nowadays underground Techno scene.">
+     <meta name="author" content="Tjasa Jan">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600,700,800,900" rel="stylesheet">
      <link rel="stylesheet" href="media-controls.css" type="text/css" />
