--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <meta name="description" content="Trick-C - First Lady of Slovenian Techno - is one of the pioneers of Slovenian electronic music &amp; Techno and without doubt from a wider perspective one of the rarest female artist with such a long mileage who is still working on nowadays underground Techno scene.">
+     <meta property="og:title" content="Trick-C | First Lady of Slovenian Techno">
+     <meta property="og:image" content="images/trick-c-image.jpg">
+     <meta property="og:description" content="Trick-C - First Lady of Slovenian Techno - is one of the pioneers of Slovenian electronic music &amp; Techno and without doubt from a wider perspective one of the rarest female artist with such a long mileage who is still working on nowadays underground Techno scene.">
+     <meta name="author" content="Tjasa Jan">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
      <link href="https://fonts.googleapis.com/css?family=Exo+2:400,600,700,800,900" rel="stylesheet">
      <link rel="stylesheet" href="media-controls.css" type="text/css" />
@@ -89,34 +94,34 @@
 
                     <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4">
                          <div class="visible-lg image-event-homepage">
-                    <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block">
+                              <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block">
                          </div>
-                         
+
                          <h2>LATEST RELEASES:</h2>
-                    <div class="boxes-releases">
-                         <img src="images/releases/release1.jpg" class="img-circle">
-                         <div class="caption">
-                              <h3>The Remixes, Vol. 4</h3>
-                              <p>Trick-C, Various Artists</p>
-                              <p><i>Shout Records</i></p>
+                         <div class="boxes-releases">
+                              <img src="images/releases/release1.jpg" class="img-circle">
+                              <div class="caption">
+                                   <h3>The Remixes, Vol. 4</h3>
+                                   <p>Trick-C, Various Artists</p>
+                                   <p><i>Shout Records</i></p>
+                              </div>
                          </div>
-                    </div>
-                    <div class="boxes-releases">
-                         <img src="images/releases/release2.jpg" class="img-circle">
-                         <div class="caption">
-                              <h3>Subspace</h3>
-                              <p>Trick-C, A-Brothers, Gabeen</p>
-                              <p><i>Shout Records</i></p>
+                         <div class="boxes-releases">
+                              <img src="images/releases/release2.jpg" class="img-circle">
+                              <div class="caption">
+                                   <h3>Subspace</h3>
+                                   <p>Trick-C, A-Brothers, Gabeen</p>
+                                   <p><i>Shout Records</i></p>
+                              </div>
                          </div>
-                    </div>
-                    <div class="boxes-releases hidden-xs">
-                         <img src="images/releases/release3.jpg" class="img-circle">
-                         <div class="caption">
-                              <h3>Lightness</h3>
-                              <p>Trick-C, Various Artists</p>
-                              <p><i>Different Is Different Records</i></p>
+                         <div class="boxes-releases hidden-xs">
+                              <img src="images/releases/release3.jpg" class="img-circle">
+                              <div class="caption">
+                                   <h3>Lightness</h3>
+                                   <p>Trick-C, Various Artists</p>
+                                   <p><i>Different Is Different Records</i></p>
+                              </div>
                          </div>
-                    </div>
                     </div>
                </div>
           </div>
