removed wav, added mp3 & ogg

--- a/releases.html
+++ b/releases.html
@@ -75,7 +75,9 @@
 
                               <div class="sample-audio">
                                    <audio controls="controls" controlsList="nodownload">
-                                        <source src="music/Subspace-Guinan.wav" type="audio/wav">Your browser does not support the audio element.
+                                        <source src="music/mp3_files/Subspace-Guinan.mp3" type="audio/mpeg">
+                                        <source src="music/ogg_files/Subspace-Guinan.ogg" type="audio/ogg">
+                                        Your browser does not support the audio element.
                                    </audio>
                                    <div class="caption-sample">
                                         <h3>Guinan (Subspace)</h3>
@@ -84,7 +86,9 @@
                               </div>
                               <div class="sample-audio">
                                    <audio controls="controls" controlsList="nodownload">
-                                        <source src="music/Subspace-Sentient-A-Brothers-Rmx.wav" type="audio/wav">Your browser does not support the audio element.
+                                        <source src="music/mp3_files/Subspace-Sentient-A-Brothers-Rmx.mp3" type="audio/mpeg">
+                                        <source src="music/ogg_files/Subspace-Sentient-A-Brothers-Rmx.ogg" type="audio/ogg">
+                                        Your browser does not support the audio element.
                                    </audio>
                                    <div class="caption-sample">
                                         <h3>Sentient (Subspace)</h3>
@@ -93,7 +97,9 @@
                               </div>
                               <div class="sample-audio">
                                    <audio controls="controls" controlsList="nodownload">
-                                        <source src="music/Ask-For-Treatment-EP-Do-Not-Ask.wav" type="audio/wav">Your browser does not support the audio element.
+                                        <source src="music/mp3_files/Ask-For-Treatment-EP-Do-Not-Ask.mp3" type="audio/mp3">
+                                        <source src="music/ogg_files/Ask-For-Treatment-EP-Do-Not-Ask.ogg" type="audio/ogg">
+                                        Your browser does not support the audio element.
                                    </audio>
                                    <div class="caption-sample">
                                         <h3>Do Not Ask (Ask For Treatment EP)</h3>
@@ -106,7 +112,9 @@
                          <div class="col-sm-6">
                               <div class="sample-audio">
                                    <audio controls="controls" controlsList="nodownload">
-                                        <source src="music/Linear-EP-Pulsar.wav" type="audio/wav">Your browser does not support the audio element.
+                                        <source src="music/mp3_files/Linear-EP-Pulsar.mp3" type="audio/mp3">
+                                        <source src="music/ogg_files/Linear-EP-Pulsar.ogg" type="audio/ogg">
+                                        Your browser does not support the audio element.
                                    </audio>
                                    <div class="caption-sample">
                                         <h3>Pulsar (Linear EP)</h3>
@@ -115,7 +123,9 @@
                               </div>
                               <div class="sample-audio">
                                    <audio controls="controls" controlsList="nodownload">
-                                        <source src="music/Linear-EP-Movements.wav" type="audio/wav">Your browser does not support the audio element.
+                                        <source src="music/mp3_files/Linear-EP-Movements.mp3" type="audio/mp3">
+                                        <source src="music/ogg_files/Linear-EP-Movements.ogg" type="audio/ogg">
+                                        Your browser does not support the audio element.
                                    </audio>
                                    <div class="caption-sample">
                                         <h3>Movements (Linear EP)</h3>
