--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                          </div>
                          <div class="projects-homepage hidden-xs hidden-sm">
                               <h3><i>"First Lady of Slovenian Techno"</i></h3>
-                              <h4>PROJECTS:</h4>
+                              <a href="projects.html">
+                                   <h4>PROJECTS:</h4>
+                              </a>
                               <p><b>Urban Divas</b> is a project created after many years of experience in the field of organisation, booking and participation in various projects on the basis of a number of experiences and cooperation in the promotion of
                                    female DJs in Slovenia, neighboring Croatia and Belgium.</p>
                               <hr>
@@ -94,12 +96,16 @@
 
                     <div class="col-xs-12 col-md-6 col-md-pull-6 col-lg-8 col-lg-pull-4">
                          <div class="visible-lg image-event-homepage">
-                              <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block">
+                              <a href="events.html">
+                                   <img src="images/events/next-event.jpg" alt="NextEvent" class="img-rounded img-responsive center-block">
+                              </a>
                          </div>
 
                          <h2>LATEST RELEASES:</h2>
                          <div class="boxes-releases">
-                              <img src="images/releases/release1.jpg" class="img-circle">
+                              <a href="releases.html">                              
+                                   <img src="images/releases/release1.jpg" class="img-circle">
+                              </a>
                               <div class="caption">
                                    <h3>The Remixes, Vol. 4</h3>
                                    <p>Trick-C, Various Artists</p>
@@ -107,7 +113,9 @@
                               </div>
                          </div>
                          <div class="boxes-releases">
-                              <img src="images/releases/release2.jpg" class="img-circle">
+                              <a href="releases.html">                              
+                                   <img src="images/releases/release2.jpg" class="img-circle">
+                              </a>
                               <div class="caption">
                                    <h3>Subspace</h3>
                                    <p>Trick-C, A-Brothers, Gabeen</p>
@@ -115,7 +123,9 @@
                               </div>
                          </div>
                          <div class="boxes-releases hidden-xs">
-                              <img src="images/releases/release3.jpg" class="img-circle">
+                              <a href="releases.html">                              
+                                   <img src="images/releases/release3.jpg" class="img-circle">
+                              </a>
                               <div class="caption">
                                    <h3>Lightness</h3>
                                    <p>Trick-C, Various Artists</p>
@@ -124,6 +134,29 @@
                          </div>
                     </div>
                </div>
+
+               <div class="row video-events">
+                    <div class="col-xs-12 col-md-6 col-lg-5 col-offset-lg-1">
+                              <div class="caption-sample">
+                                   <h3>Trick-C &commat; Depo</h3>
+                              </div>
+                              <video width="400px" height="224px" controls="controls" controlsList="nodownload">
+                                   <source src="video/mp4/trick-c.mp4" type="video/mp4">
+                                    Your browser does not support mp4 video format.
+                              </video>
+                    </div>
+                    <div class="col-xs-12 col-md-6 col-offset-lg-1">
+                              <div class="caption-sample">
+                                   <h3>Red Mama in action</h3>
+                              </div>
+                              <video width="400px" height="224px" controls="controls" controlsList="nodownload">
+                                   <source src="video/mp4/red-mama.mp4" type="video/mp4">
+                                    Your browser does not support mp4 video format.
+                              </video>
+                    </div>
+               </div> 
+
+
           </div>
           <div class="row back-to-top visible-xs">
                <div class="col-xs-12">
