updated video style

--- a/index.html
+++ b/index.html
@@ -136,23 +136,27 @@
                </div>
 
                <div class="row video-events">
-                    <div class="col-xs-12 col-md-6 col-lg-5 col-offset-lg-1">
+                    <div class="col-xs-12 col-sm-6 col-lg-5 col-lg-offset-1">
+                         <div class="sample-video">
                               <div class="caption-sample">
                                    <h3>Trick-C &commat; Depo</h3>
                               </div>
-                              <video width="400px" height="224px" controls="controls" controlsList="nodownload">
+                              <video width="400px" height="224px" controls controlsList="nodownload">
                                    <source src="video/mp4/trick-c.mp4" type="video/mp4">
                                     Your browser does not support mp4 video format.
                               </video>
+                              </div>
                     </div>
-                    <div class="col-xs-12 col-md-6 col-offset-lg-1">
-                              <div class="caption-sample">
+                    <div class="col-xs-12 col-sm-6 col-lg-5">
+                         <div class="sample-video">     
+                         <div class="caption-sample">
                                    <h3>Red Mama in action</h3>
                               </div>
-                              <video width="400px" height="224px" controls="controls" controlsList="nodownload">
+                              <video width="400px" height="224px" controls controlsList="nodownload">
                                    <source src="video/mp4/red-mama.mp4" type="video/mp4">
                                     Your browser does not support mp4 video format.
                               </video>
+                         </div>
                     </div>
                </div> 
 
