--- a/music.html
+++ b/music.html
@@ -52,9 +52,9 @@
 
      <!-- Section Content Music -->
      <section class="container-fluid section-page-container section-image">
-          <div class="row page-heading">
+          <div class="row page-heading image-soundwave">
                <div class="col-xs-12">
-                    <h2>Mixes</h2>
+                    <h2>&nbsp;</h2>
                </div>
           </div>
 
