--- a/projects.html
+++ b/projects.html
@@ -116,8 +116,19 @@
                               For all people who love techno with the touch of the pristine underground.
                          </p>
                          <p>
-                              Our residents: Trick-C. – (Techno, New School Techno, Dark Techno, Industrial, Harddrive) and aka Red Mama (HardTechno) Neotech - Dante Benami Teychee (HR) - Techno aka Insurgency Industria (HR) - Industrial AlyCea (Bodywork Junior) - HardTechno Acts:
-                              Harddivas (Trick-C &amp; Teychee) - 2 Djanes, 2 mixers, 4 decks - Harddrive, new school, Techno
+                              Our residents: 
+                         </p>
+                         <ul>
+                              <li>Trick-C. (Techno, New School Techno, Dark Techno, Industrial, Harddrive) and aka Red Mama (HardTechno)</li>
+                              <li>Dante Benami (Techno)</li>
+                              <li>Teychee (Techno) and aka Insurgency Industria (Industrial) </li>
+                              <li>AlyCea (HardTechno) </li>
+                         </ul>
+                         <p>
+                              Acts:
+                         </p>
+                         <p>
+                              Harddivas (Trick-C &amp; Teychee) - 2 Djanes, 2 mixers, 4 decks - Harddrive, New School, Techno
                          </p>
                     </div>
                </div>
